--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "docs": "npx jsdoc -c jsdoc.json"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "jsdoc": "3.6.11",
+    "mocha": "10.1.0",
     "nodemon": "2.0.20",
     "pino-pretty": "9.1.1"
   }
